--- a/Scripts/render.yaml
+++ b/Scripts/render.yaml
@@ -1,1 +1,12 @@
+services:
+  - type: web
+    name: my-python-app
+    env: python
+    plan: free
+    region: oregon
+    buildCommand: "pip install -r requirements.txt"
+    startCommand: "gunicorn app:app"
+    envVars:
+      - key: FLASK_ENV
+        value: production
 
