--- a/Scripts/render.yaml
+++ b/Scripts/render.yaml
@@ -1,12 +1,10 @@
 services:
   - type: web
-    name: my-python-app
+    name: pdf-analyzer
     env: python
-    plan: free
-    region: oregon
-    buildCommand: "pip install -r requirements.txt"
-    startCommand: "gunicorn app:app"
+    buildCommand: pip install -r requirements.txt
+    startCommand: gunicorn app:app
     envVars:
-      - key:
-        value:
-
+      - key: PYTHON_VERSION
+        value: 3.10
+    plan: free
